<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="item_home">Home</string>
    <string name="item_sound">Equalizer</string>
    <string name="item_timer">Sleep Timer</string>
    <string name="item_fav">Favourites</string>
    <string name="item_playlist">Playlists</string>
    <string name="close">Close</string>
    <string name="open">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
