<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/home"
            android:title="@string/item_home" />

        <item
            android:id="@+id/item_sound"
            android:icon="@drawable/equalizer"
            android:title="@string/item_sound" />

        <item
            android:id="@+id/item_timer"
            android:icon="@drawable/timer"
            android:title="@string/item_timer" />

        <item
            android:id="@+id/item_fav"
            android:icon="@drawable/fav"
            android:title="@string/item_fav" />

        <item
            android:id="@+id/item_playlist"
            android:icon="@drawable/playlist"
            android:title="@string/item_playlist" />
    </group>


</menu>